# persistencia-2

./: .env-model  .gitignore  NoVSCO.db  bancoTest.db  database.py  main.py  pyproject.toml  teste.db
models/: album.py  perfil.py  publicacao.py
rotas/: album.py  perfil.py  pubAlbum.py  publicacao.py
