[project]
name = "teset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "db-sqlite3>=0.0.1",
    "fastapi[standard]>=0.115.6",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.37",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.2",
    "taskipy>=1.14.1",
]
